# WhatsAppBusinessKW

./: .gitignore  DEPLOYMENT.md  Enterprise_Integration_Blueprint.md  Enterprise_Integration_Blueprint.pptx  GAP_ANALYSIS.md  KW_Growth_Engine_Sprint_Plan.xlsx  Makefile  README.md  create_sprint_plan.py  test_all_15_gaps.py  test_all_gaps.py  test_all_phases.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 1bde970a88d3_invoice_number_unique_per_company.py  1cefbd1e74ea_add_resolve_instagram_channel_function.py  359ca78ab254_exclude_users_from_rls_for_auth_.py  66b2269a3409_harden_rls_policies_against_unset_tenant.py  7c2592f64503_allow_public_read_on_published_landing_.py  85ab1623c66c_grant_app_user_table_privileges.py  c1d2baf5e47d_initial_schema.py  ecc08a5666f9_add_performance_indexes.py  f56baac2d30e_enable_rls_on_tenant_tables.py
backend/app/: config.py  dependencies.py  dependencies_platform.py  main.py
backend/app/api/: router.py
backend/app/core/: cache.py  database.py  events.py  exceptions.py  logging.py  metrics.py  middleware.py  observability.py  pagination.py  permissions.py  rate_limiter.py  redis.py  security.py  storage.py
backend/app/models/: __init__.py  ai_context.py  audit.py  auth.py  automation.py  base.py  campaign.py  catalog.py  channel.py  chatbot.py  company.py  contact.py  conversation.py  glossary.py  landing_page.py  message.py  payment.py  pipeline.py  routing_decision.py  shipping.py  survey.py
backend/app/schemas/: ai.py  auth.py  automations.py  campaigns.py  chatbots.py  common.py  contacts.py  conversations.py  landing_pages.py  payments.py  pipelines.py  shipping.py
backend/app/services/: actor.py  analytics_service.py  audit_service.py  auth_service.py  automation_service.py  campaign_service.py  chatbot_executor.py  chatbot_service.py  citra_compliance.py  compliance_service.py  contact_service.py  conversation_service.py  custom_field_service.py  email_service.py  landing_page_service.py  pipeline_service.py  (+5 more)
backend/scripts/: promote_platform_admin.py  seed.py  seed_demo.py
backend/tests/: conftest.py
(+170 files in other folders)
