[project]
name = "kwgrowth-api"
version = "0.1.0"
description = "Kuwait WhatsApp Growth Engine - Enterprise CRM Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # HTTP client
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.1.0",
    # Storage (S3)
    "boto3>=1.34.0",
    # Phone numbers
    "phonenumbers>=8.13.0",
    # Encryption
    "cryptography>=42.0.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    # Observability
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The app caches a singleton SQLAlchemy async engine at import time. asyncpg
# connections are bound to the event loop that created them, so per-test
# loops would error with "Future attached to a different loop" on the second
# test. Sharing one session-scoped loop keeps the engine happy.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
